# ai-training

BootCamp-Langraph/: 1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call.ipynb  5_tool_call_agent.ipynb  6_memory.ipynb  7_langsmith_tracing.ipynb  8_HITL.py  9.Multi_agent_workflow.ipynb  README.md  custom_llm.py  llm_search.py  pyproject.toml
Bootcamp-rag/: Retrieval.ipynb  SECRag.ipynb  UV_SETUP.md  agentic_rag.py  pyproject.toml  setup_with_uv.sh
Session 2 -Deep Learning/: DeepLearning.md  gpuvscpu.py  gradient_descent.py  simple_shallow_neuralnet.py
Session-4-RAG/: SECRag.ipynb
Session1- ML Basics/: readme.md
Session1- ML Basics/BangloreHomePrices/model/: banglore_home_prices_final.ipynb  banglore_home_prices_model.pkl
Session1- ML Basics/BangloreHomePrices/server/: server.py  util.py
