[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-experimental>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.2.0",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "notebook>=7.4.3",
    "python-dotenv>=1.1.0",
]
