[project]
name = "rag-demo"
version = "1.0.0"
description = "Complete RAG Demo with LangGraph, Milvus, and NetApp LLM"
authors = [
    {name = "Prabhu & Claude Sonnet", email = "pg47711@netapp.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {text = "MIT"}

keywords = ["rag", "langchain", "langgraph", "milvus", "llm", "ai", "retrieval"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core Dependencies
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-core>=0.3.0",
    
    # Vector Store
    "pymilvus>=2.4.0",
    "langchain-milvus>=0.1.0",
    
    # Document Processing
    "pypdf>=5.0.0",
    
    # Embeddings & Models
    "sentence-transformers>=5.0.0",
    "transformers>=4.41.0,<5.0.0",
    "torch>=2.0.0",
    
    # Data Science & ML
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    
    # Workflow & Visualization
    "langgraph>=0.2.0",
    "grandalf>=0.8",
    
    # Evaluation & Monitoring
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipython>=8.0.0",
]

notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

all = [
    "rag-demo[dev,notebook]",
]

[project.urls]
Homepage = "https://github.com/your-org/rag-demo"
Documentation = "https://github.com/your-org/rag-demo/blob/main/README.md"
Repository = "https://github.com/your-org/rag-demo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
